Clean up .controls-extended and fix .icon-close covering control items

--- a/styles/note.scss
+++ b/styles/note.scss
@@ -83,8 +83,8 @@
         background-color: $gray;
         border: 1px solid $lgray;
         color: $lllgray;
-        width: 10em;
-        height: 9em;
+        width: 11em;
+        height: 11em;
         padding: 0.2em;
         line-height: 80%;
         font-size: 80%;
@@ -101,14 +101,12 @@
     }
     
     .controls-extended > .icon-close {
-        position: absolute;
         text-align: right;
-        border: none;
     }
     
     .flags {
         
-        height: 5em;
+        height: 6em;
         overflow-y: auto;
         
         .flag {
